--- a/newportfolio.css
+++ b/newportfolio.css
@@ -2,6 +2,7 @@ html {
 
 background: linear-gradient(to bottom, purple, pink);
 min-height: 100%;
+background-size: cover;
 }
 
 body {
@@ -29,6 +30,7 @@ flex-basis: auto;
 .flex-item-2 {
 
 margin: auto;
+padding-top:20px;
 
 
 }
@@ -61,6 +63,7 @@ font-family: Quicksand, serif;
 color: #4f0959;
 font-size: 1.5em;
 padding: 1em;
+
 }
 
 ul li {
@@ -83,7 +86,166 @@ ul a:hover {
 
 img {
 
-height: 20%;
-width: 20%;
+height: 45%;
+width: 75%;
 
+}
+
+
+.grid {
+
+  box-sizing: border-box;
+  font-size: 10px;
+}
+
+/*
+.imgholder {
+
+  width: 100%;
+}
+
+.imgholder img {
+
+  width: 100%;
+  overflow: hidden;
+}
+
+.imgholder {
+
+  overflow: hidden;
+}
+*/
+
+[class*='box-'] {
+
+  float: left;
+  width: 29%;
+  height: 50em;
+  padding: 1em;
+  background-color: rgba(0,0,0,0.3);
+  margin: 10px;
+
+}
+
+/*2 column layout, reduced header size*/
+
+@media (max-width:1000px) {
+html  [class*='box-'] {
+
+    float: left;
+    width: 44%;
+    height: 40em;
+    padding: 1em;
+    background-color: rgba(0,0,0,0.3);
+    margin: 10px;
+
+  }
+
+  h2 {
+
+font-size: 3em;
+
+  }
+
+  .flex-item-1 a {
+
+    font-size: 1.5em;
+
+  }
+}
+
+/*1 column layout, small nav*/
+
+@media (max-width:600px) {
+
+  html [class*='box-'] {
+  float: left;
+  width: 95%;
+  height: 40em;
+  padding: 1em;
+  background-color: rgba(0,0,0,0.3);
+  margin:10px 30px 10px 10px;
+
+}
+
+h2 {
+
+  font-size: 2em;
+}
+
+.flex-item-1  a {
+
+  font-size: 1em;
+}
+
+img {
+
+  height: 200px;
+  width: 250px;
+
+
+}
+
+}
+
+/*very small screen - only show description and link to work, remove image */
+
+@media (max-width:320px) {
+
+  img {
+    display:none;
+  }
+}
+
+
+/* unnecessary repetitive code
+
+.box-2 {
+
+  float: left;
+  width: 29%;
+  height: 50em;
+  padding: 1em;
+  background-color: rgba(0,0,0,0.3);
+  margin: 10px;
+}
+
+.box-3 {
+
+  float: left;
+  width: 29%;
+  height: 50em;
+ padding: 1em;
+ background-color: rgba(0,0,0,0.3);
+ margin: 10px;
+}
+
+.box-4 {
+
+  float: left;
+  width: 29%;
+  height: 50em;
+ padding: 1em;
+ background-color: rgba(0,0,0,0.3);
+ margin: 10px;
+}
+
+.box-5 {
+
+  float: left;
+  width: 29%;
+  height: 50em;
+ padding: 1em;
+ background-color: rgba(0,0,0,0.3);
+ margin: 10px;
+}
+
+.box-6 {
+
+  float: left;
+  width: 29%;
+  height: 50em;
+ padding: 1em;
+ background-color: rgba(0,0,0,0.3);
+ margin: 10px;
 }
